--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,10 +7,10 @@
   </div>
   <div class="p-4 pt-5">
     <h1><a href="index.html" class="logo">Splash</a></h1>
-    <ul class="list-unstyled components mb-5">
+    <ul class="list-unstyled components">
       <li class="active">
-        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Utilsateurs</a>
-        <ul class="collapse list-unstyled" id="homeSubmenu">
+        <a href="#homeSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Utilsateurs</a>
+        <ul class="collapse list-unstyled" id="homeSubmenu1">
           <li>
             <a [routerLink]="['/administrateurs']">administrateurs</a>
           </li>
@@ -23,6 +23,25 @@
           <li>
             <a [routerLink]="['/ajoutUtilisateur']">Créer utilisateur</a>
           </li>
+
+        </ul>
+      </li>
+
+    </ul>
+
+    <ul class="list-unstyled components mb-5">
+      <li class="active">
+        <a href="#homeSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Gerer les
+          modules</a>
+        <ul class="collapse list-unstyled" id="homeSubmenu2">
+          <li>
+            <a [routerLink]="['/modules']">modules</a>
+          </li>
+          <li>
+            <a [routerLink]="['/addModule']">creer module</a>
+          </li>
+
+
 
         </ul>
       </li>
