--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -7,6 +7,7 @@
         <span *ngIf="emailError">* Un utilisateur avec cet email existe deja !</span>
       </div>
       <!-- Nom et prenom -->
+
       <div class="form-row">
         <!-- Default input -->
         <div class="form-group col-md-6">
@@ -20,7 +21,17 @@
           </span>
 
         </div>
+        <div class="form-group col-md-6">
+          <label for="prenom">prenom</label>
+          <input type="text" class="form-control" placeholder="prenom" name="prenom" [(ngModel)]="user.prenom"
+            #prenom="ngModel" [ngClass]="{
+            'is-invalid': (prenom.errors && (prenom.touched ||verify))
+          }" required>
+          <span id="span-fullName" class="invalid-feedback" [hidden]="!nom.errors?.required ">
+            Cette valeur est obligatoire
+          </span>
 
+        </div>
 
       </div>
 
@@ -54,6 +65,15 @@
         </div>
       </div>
       <!-- adress -->
+      <div class="mb-2">
+        <label for=""> les modules:</label>
+        <ng-multiselect-dropdown style="width: 50%;" placeholder="Choisir les modules" [(ngModel)]="selectedItems"
+          [settings]="dropdownSettings" [data]="dropdownList" name="model" (onSelect)="onSelect($event)"
+          (onDeSelect)="ondeSelect($event)" (onSelectAll)="onsSelectAll($event)"
+          (onDeSelectAll)="ondeSelectAll($event)">
+        </ng-multiselect-dropdown>
+
+      </div>
       <div class="form-group">
         <label for="adress">adress</label>
         <input type="text" class="form-control" placeholder="adress" name="adress" #adress="ngModel" [ngClass]="{
@@ -129,6 +149,8 @@
         </div>
 
       </div>
+
+
       <button type="submit" class="btn btn-md" style="background-color: #19B3D3;color: white;">Sign in</button>
     </form>
   </div>
