--- a/src/app/update-user/update-user.component.html
+++ b/src/app/update-user/update-user.component.html
@@ -73,6 +73,14 @@
           Cette valeur est obligatoire
         </span>
       </div>
+      <div class="mb-2">
+        <label for=""> les modules:</label>
+        <ng-multiselect-dropdown style="width: 50%;" placeholder="Choisir les modules" [(ngModel)]="selectedItems"
+          (onDeSelect)="ondeSelect($event)" [settings]="dropdownSettings" [data]="dropdownList" name="model"
+          (onSelect)="onSelect($event)" (onSelectAll)="onsSelectAll($event)" (onDeSelectAll)="ondeSelectAll($event)">
+        </ng-multiselect-dropdown>
+
+      </div>
 
       <!-- Grid row -->
       <div class="form-row">
