--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,8 @@
 #sidebar {
   min-width: 250px;
   max-width: 250px;
-  height: 100%;
+  height:   100%;
+
   background: #22242A;
   color: #fff;
   -webkit-transition: all 0.3s;
@@ -154,3 +155,18 @@ body{
 
 
 
+.multiselect-dropdown .dropdown-btn {
+  display: inline-block;
+  border: 1px solid #adadad;
+  width: 100%;
+  padding: 6px 12px;
+  margin-bottom: 0;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.1;
+  text-align: left;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border-radius: 4px;
+}
