--- a/src/app/etudiants/etudiants.component.html
+++ b/src/app/etudiants/etudiants.component.html
@@ -28,7 +28,7 @@
           <th>Email</th>
           <th>Telephone</th>
           <th>Address</th>
-          <th></th>
+          <th>actions</th>
         </thead>
         <tbody>
           <tr *ngFor=" let utilisateur of utilisateurs">
