--- a/src/app/modules/modules.component.html
+++ b/src/app/modules/modules.component.html
@@ -1,74 +1,77 @@
 <div class="card">
   <div class="card-header grey lighten-4">
-    <h2 class="mt-3 mb-2">Administrateurs</h2>
+    <h2 class="mt-3 mb-2">Modules</h2>
   </div>
-  <div class="card-body">
+  <div class="card-body ">
+    <div class="col-9 m-auto">
+      <!-- Search form -->
+      <form [formGroup]="filterForm">
 
-    <!-- Search form -->
-    <form [formGroup]="filterForm">
-
-      <div class="row mb-3">
-        <div class="input-group mb-2 col-md-4 col-sm-12">
-          <div class="input-group-prepend">
-            <span class="input-group-text  text-white" style="background-color: #19B3D3 ;" id="basic-addon1"><i
-                class="fas fa-search"></i></span>
+        <div class="row mb-3">
+          <div class="input-group mb-2 col-md-4 col-sm-12">
+            <div class="input-group-prepend">
+              <span class="input-group-text  text-white" style="background-color: #19B3D3 ;" id="basic-addon1"><i
+                  class="fas fa-search"></i></span>
+            </div>
+            <input type="text" class="form-control" placeholder="Chercher" aria-label="Username"
+              aria-describedby="basic-addon1" (keyup)="onChercher($event)" formControlName="keyword">
           </div>
-          <input type="text" class="form-control" placeholder="Chercher" aria-label="Username"
-            aria-describedby="basic-addon1" (keyup)="onChercher($event)" formControlName="keyword">
         </div>
+      </form>
+
+
+      <div class="table-responsive">
+        <table *ngIf="utilisateurs" class="table table-sm table-bordered bg-white">
+          <thead>
+            <th style="width: 65%;">Nom du module</th>
+            <th>Actions</th>
+
+          </thead>
+          <tbody>
+            <tr *ngFor=" let utilisateur of utilisateurs">
+              <td>{{utilisateur.nom}}</td>
+
+              <td><button class="btn  btn-sm btn-danger text-white" (click)="delete(utilisateur.id)">Delete</button>
+                <button class="btn btn-sm btn-primary" (click)="update(utilisateur.id)">Update</button>
+              </td>
+            </tr>
+
+          </tbody>
+          <tbody *ngIf="!utilisateurs || utilisateurs.length === 0">
+            <tr>
+              <td colspan="5">
+                No users
+              </td>
+
+            </tr>
+          </tbody>
+        </table>
+
       </div>
-    </form>
+      <ul *ngIf="pages" class="nav nav-pills mt-2">
+        <li *ngIf="page!==0" class="page-item bg-white">
+          <a *ngIf="page!==0" class="page-link" (click)="goToPage(page-1)">Previous</a>
 
+        </li>
+        <li *ngIf="page==0" class="page-item disabled bg-white">
+          <a class="nav-link">Previous</a>
 
-    <div class="table-responsive">
-      <table *ngIf="utilisateurs" class="table table-sm table-bordered bg-white">
-        <thead>
-          <th>Nom du module</th>
+        </li>
+        <li class="clickable nav-item" *ngFor="let p of pages;let i = index">
+          <a [ngClass]="i==page? 'blue lighten-1 text-white' : 'bg-white text-dark'" class="nav-link"
+            (click)="goToPage(i)">{{i}}</a>
 
+        </li>
+        <li *ngIf="page!==pages.length-1" class="page-item bg-white">
+          <a *ngIf="page!==pages.length-1" class="page-link" (click)="goToPage(page+1)">Next</a>
 
-        </thead>
-        <tbody>
-          <tr *ngFor=" let utilisateur of utilisateurs">
-            <td>{{utilisateur.nom}}</td>
+        </li>
+        <li *ngIf="page==pages.length-1" class="page-item disabled bg-white">
+          <a class="nav-link">Next</a>
 
-            <td><button class="btn btn-danger" (click)="delete(utilisateur.id)">Delete</button></td>
-          </tr>
-
-        </tbody>
-        <tbody *ngIf="!utilisateurs || utilisateurs.length === 0">
-          <tr>
-            <td colspan="5">
-              No users
-            </td>
-
-          </tr>
-        </tbody>
-      </table>
-
+        </li>
+      </ul>
     </div>
-    <ul *ngIf="pages" class="nav nav-pills mt-2">
-      <li *ngIf="page!==0" class="page-item bg-white">
-        <a *ngIf="page!==0" class="page-link" (click)="goToPage(page-1)">Previous</a>
-
-      </li>
-      <li *ngIf="page==0" class="page-item disabled bg-white">
-        <a class="nav-link">Previous</a>
-
-      </li>
-      <li class="clickable nav-item" *ngFor="let p of pages;let i = index">
-        <a [ngClass]="i==page? 'blue lighten-1 text-white' : 'bg-white text-dark'" class="nav-link"
-          (click)="goToPage(i)">{{i}}</a>
-
-      </li>
-      <li *ngIf="page!==pages.length-1" class="page-item bg-white">
-        <a *ngIf="page!==pages.length-1" class="page-link" (click)="goToPage(page+1)">Next</a>
-
-      </li>
-      <li *ngIf="page==pages.length-1" class="page-item disabled bg-white">
-        <a class="nav-link">Next</a>
-
-      </li>
-    </ul>
 
   </div>
 </div>
