--- a/src/app/profs/profs.component.html
+++ b/src/app/profs/profs.component.html
@@ -28,6 +28,7 @@
           <th>Email</th>
           <th>Telephone</th>
           <th>Address</th>
+          <th>actions</th>
         </thead>
         <tbody>
           <tr *ngFor=" let utilisateur of utilisateurs">
@@ -37,7 +38,9 @@
 
             <td>{{utilisateur.telephone}}</td>
             <td>{{utilisateur.adress}}</td>
-            <td><button class="btn btn-sm btn-danger" (click)="delete(utilisateur.id)">Delete</button></td>
+            <td><button class="btn btn-sm btn-danger" (click)="delete(utilisateur.id)">Delete</button>
+              <button class="btn btn-sm btn-primary" (click)="update(utilisateur.id)">Update</button>
+            </td>
           </tr>
 
         </tbody>
