adding sceance form,and abscences times

--- a/src/app/administrateurs/administrateurs.component.html
+++ b/src/app/administrateurs/administrateurs.component.html
@@ -39,8 +39,8 @@
 
             <td>{{utilisateur.telephone}}</td>
             <td>{{utilisateur.adress}}</td>
-            <td><button class="btn btn-danger" (click)="delete(utilisateur.id)">Delete</button>
-              <button class="btn btn-sm btn-primary" (click)="update(utilisateur.id)">Update</button>
+            <td><button class="btn btn-sm text-white btn-danger" (click)="delete(utilisateur.id)">Delete</button>
+              <button class="btn btn-sm text-white btn-primary" (click)="update(utilisateur.id)">Update</button>
             </td>
           </tr>
 
