--- a/src/app/profs/profs.component.html
+++ b/src/app/profs/profs.component.html
@@ -38,8 +38,8 @@
 
             <td>{{utilisateur.telephone}}</td>
             <td>{{utilisateur.adress}}</td>
-            <td><button class="btn btn-sm btn-danger" (click)="delete(utilisateur.id)">Delete</button>
-              <button class="btn btn-sm btn-primary" (click)="update(utilisateur.id)">Update</button>
+            <td><button class="btn btn-sm btn-danger text-white" (click)="delete(utilisateur.id)">Delete</button>
+              <button class="btn btn-sm btn-primary text-white" (click)="update(utilisateur.id)">Update</button>
             </td>
           </tr>
 
