--- a/src/app/navbar-prof/navbar-prof.component.html
+++ b/src/app/navbar-prof/navbar-prof.component.html
@@ -11,6 +11,7 @@
       <li class="active">
         <a [routerLink]="['/sceances']">sceances</a>
         <a [routerLink]="['/addSceance']">Creation d'une sceance</a>
+        <a [routerLink]="['/abscences']">Chercher une sceance</a>
       </li>
 
     </ul>
